--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,480 +1,6 @@
 @import 'includes/variables';
 @import 'includes/functions';
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400&subset=latin-ext');
-
-body {
-  width: 100%;
-  height: 100%;
-
-  .body-wrapper {
-    width: inherit;
-    height: inherit;
-    overflow-x: hidden !important; // hide vertical
-    position: fixed;
-  }
-}
-
-h1 {
-  font-family: 'Roboto Condensed', sans-serif;
-  font-size: 30px;
-  color: #212121;
-}
-
-p {
-  font-family: 'Roboto Condensed', sans-serif;
-  font-size: 16px;
-  color: #616161;
-}
-
-.button-collapse {
-  @include md() {
-    display: none;
-  }
-}
-
-#landing-page {
-  width: 100%;
-  height: 100%;
-  background-color: $light-blue;
-
-  .flex-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
-
-    nav {
-
-      .navigation {
-        display: none;
-        @include md() {
-          display: inline-block;
-        }
-      }
-
-      .nav-header {
-        height: 150px;
-        background: linear-gradient(rgba(1, 87, 155, 0.7), rgba(1, 87, 155, 0.7)), url('/images/spiration-light.png');
-        width: 100%;
-      }
-
-      #nav-button {
-        height: 38px;
-      }
-
-      #slide-out {
-        width: 250px;
-
-        @include sm() {
-          width: 320px;
-        }
-      }
-    }
-
-    .landing-page-headline {
-      text-align: center;
-
-      h1 {
-        font-weight: 300;
-        font-size: 35px;
-        color: #F5F5F5;
-        font-family: 'Roboto Condensed', sans-serif;
-
-        @include sm() {
-          font-size: 65px;
-        }
-
-        @include lg() {
-          font-size: 75px;
-        }
-      }
-      h2 {
-        font-size: 25px;
-        font-weight: 300;
-        color: #E0E0E0;
-
-        @include sm() {
-          font-size: 35px;
-        }
-
-        @include lg() {
-          font-size: 40px;
-        }
-      }
-    }
-
-    .ide {
-      width: 90%;
-      height: 180px;
-      background-color: $device-gray;
-      border-top-left-radius: 15px;
-      border-top-right-radius: 15px;
-      position: relative;
-      padding: 0 15px;
-      transition: all 1.5s ease-out;
-      top: 100%;
-
-      @include sm() {
-        height: 240px;
-        padding: 0 20px;
-      }
-
-      @include lg() {
-        height: 300px;
-        width: 75%;
-      }
-
-      @include xl() {
-        width: 55%;
-      }
-
-      .ide-header {
-        top: 0;
-        left: 0;
-        height: 30px;
-        width: 100%;
-        display: flex;
-        align-items: center;
-
-        .icon {
-          height: 5px;
-          width: 5px;
-          border-radius: 10px;
-          margin-right: 5px;
-
-          @include sm() {
-            height: 9px;
-            width: 9px;
-            margin-right: 7px;
-          }
-
-          @include lg() {
-            height: 11px;
-            width: 11px;
-            margin-right: 8px;
-          }
-        }
-
-        .icon-exit {
-          @extend .icon;
-          background-color: #F44336;
-
-        }
-
-        .icon-minimize {
-          @extend .icon;
-          background-color: #FFC107;
-        }
-
-        .icon-expand {
-          @extend .icon;
-          background-color: #4CAF50;
-        }
-      }
-
-      .ide-content {
-        display: flex;
-        flex-direction: column;
-        color: white;
-        font-size: 18px;
-        overflow: hidden;
-        height: 100%;
-
-        @include sm() {
-          font-size: 22px;
-        }
-
-        @include lg() {
-          font-size: 25px;
-        }
-
-        .line {
-          position: relative;
-          top: 100%;
-          transition: all 1s ease-out;
-        }
-
-        .ide-line {
-          display: flex;
-          align-items: center;
-          height: 15px;
-
-          @include sm() {
-            height: 20px;
-            margin-top: 2px;
-          }
-
-          @include lg() {
-            height: 25px;
-            margin-top: 3px;
-          }
-        }
-
-        .ide-line-indented-first {
-          @extend .ide-line;
-          padding-left: 15px;
-        }
-
-        .ide-line-indented-second {
-          @extend .ide-line;
-          padding-left: 30px;
-        }
-
-        .ide-line-indented-third {
-          @extend .ide-line;
-          padding-left: 45px;
-        }
-
-        .code {
-          @include code-sm(35px, #FF7043);
-        }
-
-        .html-tag {
-          @include code-sm(20px, #424242)
-        }
-
-        .head-tag {
-          @include code-sm(20px, #616161)
-        }
-
-        .head-first-tag {
-          @include code-sm(85px, #757575)
-        }
-
-        .head-second-tag {
-          @include code-sm(25px, #757575)
-        }
-
-        .head-second-content {
-          @include code-sm(50px, #FDD835)
-        }
-
-        .body-tag {
-          @include code-sm(20px, #757575)
-        }
-
-        .body-first-tag {
-          @include code-sm(45px, #9E9E9E)
-        }
-
-        .body-second-tag {
-          @include code-sm(35px, #BDBDBD)
-        }
-
-        .body-second-tag-content {
-          @include code-sm(75px, #FDD835)
-        }
-
-      }
-    }
-  }
-}
-
-#responsive-design {
-  overflow-x: hidden; // hide vertical
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  transition: all 3s ease-out;
-
-  @include md() {
-    flex-direction: row;
-
-  }
-
-  .rwd-animation-wrapper {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 210px;
-    margin: 15px 0;
-    @include md() {
-      flex-basis: 50%;
-    }
-    .mobile {
-      background: $device-gray;
-      width: 100px;
-      height: 150px;
-      border-radius: 25px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      transition: 1.5s ease-out;
-      position: absolute;
-      right: -100%;
-
-      .mobile-screen {
-        width: 75%;
-        height: 75%;
-        background-color: $screen-white;
-
-        .mobile-content {
-          display: flex;
-          flex-direction: column;
-          justify-content: space-between;
-          align-items: center;
-          height: 100%;
-          padding-bottom: 10px;
-
-          .mobile-nav {
-            height: 20px;
-            width: 100%;
-            background-color: $primary-blue;
-            align-self: flex-start;
-          }
-
-          .mobile-block {
-            background-color: #BDBDBD;
-            height: 15%;
-            width: 80%;
-          }
-        }
-      }
-    }
-
-    .tablet {
-      background: $device-gray;
-      width: 125px;
-      height: 200px;
-      border-radius: 25px;
-      align-items: center;
-      justify-content: center;
-      transition: all 1.5s ease-out;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      position: absolute;
-      right: -100%;
-
-      &-screen {
-        width: 75%;
-        height: 75%;
-        background-color: $screen-white;
-        display: flex;
-        flex-direction: column;
-      }
-
-      &-nav {
-        height: 20px;
-        width: 100%;
-        background-color: $primary-blue;
-        align-self: flex-start;
-      }
-
-      &-content {
-
-        .tablet-wrapper {
-          width: 90%;
-          margin: 0 auto;
-          display: flex;
-          flex-wrap: wrap;
-          justify-content: space-between;
-          align-items: center;
-          padding-top: 5px;
-
-          & > .tablet-block {
-            background-color: #BDBDBD;
-            height: 13%;
-            flex-basis: 100%;
-            margin: 5px auto;
-          }
-
-          & > .tablet-block ~ .tablet-block {
-            flex-basis: 45%;
-          }
-        }
-      }
-    }
-
-    .desktop {
-      display: flex;
-      background: $device-gray;
-      width: 240px;
-      height: 210px;
-      border-radius: 25px;
-      align-items: center;
-      justify-content: center;
-      transition: all 1.5s ease-out;
-      position: absolute;
-      right: -100%;
-
-      &-screen {
-        width: 80%;
-        height: 75%;
-        background-color: $screen-white;
-        display: flex;
-        flex-direction: column;
-
-      }
-
-      &-content {
-        display: flex;
-        flex-direction: column;
-
-        .desktop-nav {
-          height: 30px;
-          width: 100%;
-          background-color: $primary-blue;
-          align-self: flex-start;
-        }
-
-        .desktop-wrapper {
-          display: flex;
-          margin-top: 30px;
-          flex-direction: column;
-          padding: 0 10px;
-
-          .desktop-block {
-            background-color: #BDBDBD;
-            margin-top: 10px;
-            height: 20px;
-          }
-
-          .desktop-row {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-
-            .left-row {
-              flex-basis: 50%;
-
-              .desktop-block {
-                height: 50px;
-              }
-
-            }
-
-            .right-row {
-              flex-basis: 45%;
-            }
-
-          }
-
-        }
-
-      }
-    }
-  }
-  .rwd-description {
-
-    h1 {
-      text-align: center;
-      margin: 5px 0;
-    }
-
-    p {
-      text-align: center;
-    }
-
-    @include md() {
-      flex-basis: 50%;
-      height: 100%;
-      z-index: 5;
-    }
-  }
-}
+@import "common";
+@import "header-section";
+@import "rwd-section";
